# stakenet-light-wallet

./: .clang-format  .gitignore  DEPLOY.md  README.md  xsn-wallet.pro
src/: CMakeLists.txt  conanfile.py
src/app/: AppUpdater.cpp  AppUpdater.hpp  CMakeLists.txt  MouseEventSpy.cpp  MouseEventSpy.hpp  QMLClipboardAdapter.cpp  QMLClipboardAdapter.hpp  QMLUtils.cpp  QMLUtils.hpp  StakenetApplication.cpp  StakenetApplication.hpp  StakenetConfig.cpp.in  StakenetConfig.hpp  TorManager.cpp  TorManager.hpp  UpdateConfig.cpp  UpdateConfig.hpp  app.pro  main.cpp
src/app/assets/: CHANGELOG.txt  Dex_disclaimer_image  Info.plist  assets.qrc  assets_conf.json  auraspace.json  basicSkin.json  basicSkin1.json  basicSkin2.json  basicSkin3.json  basicSkin4.json  basicSkin5.json  graphiteSkin.json  hazeSkin.json  hemaSkin.json  lnd-config.json  raySkin.json  resolve-a.conf  resolve-b.conf  slateblueSkin.json  winResourse.rc
src/app/connext_browser_node/: browser_node.qrc
src/app/qml/: main.qml  qml.qrc
src/checksum/: CMakeLists.txt  checksum.pro  main.cpp
src/common/: CMakeLists.txt  common.pro  libcommon.pri
src/common/Utils/: ExtendedKeyPathBip44.cpp  ExtendedKeyPathBip44.hpp  GenericProtoDatabase.hpp  Logging.cpp  Logging.hpp  Utils.cpp  Utils.hpp
src/core/: CMakeLists.txt  core.pro  core.qbs  libcore.pri
src/core/Chain/: AbstractAssetAccount.cpp  AbstractAssetAccount.hpp  AbstractChainDataSource.cpp  AbstractChainDataSource.hpp  AbstractChainManager.cpp  AbstractChainManager.hpp  AbstractChainSyncManager.cpp  AbstractChainSyncManager.hpp  AbstractTransactionsCache.cpp  AbstractTransactionsCache.hpp  AccountCacheImpl.cpp  AccountCacheImpl.hpp  AccountSyncHelper.cpp  AccountSyncHelper.hpp  AccountSyncManager.cpp  AccountSyncManager.hpp  BlockFilterMatcher.cpp  BlockFilterMatcher.hpp  BlockHeader.cpp  BlockHeader.hpp  BlockIndex.cpp  BlockIndex.hpp  CachedChainDataSource.cpp  CachedChainDataSource.hpp  Chain.cpp  Chain.hpp  ChainManager.cpp  ChainManager.hpp  ChainSyncHelper.cpp  ChainSyncHelper.hpp  ChainSyncManager.cpp  ChainSyncManager.hpp  EmulatorChainSyncManager.cpp  EmulatorChainSyncManager.hpp  RegtestChain.cpp  RegtestChain.hpp  TransactionsCache.cpp  TransactionsCache.hpp
src/core/Data/: AbstractAssetBalanceProvider.cpp  AbstractAssetBalanceProvider.hpp  AbstractLndProcessManager.hpp  AbstractOrderbookDataSource.cpp  AbstractOrderbookDataSource.hpp  AllOrdersDataSource.cpp  AllOrdersDataSource.hpp  AssetAccountBalanceProvider.cpp  AssetAccountBalanceProvider.hpp  AssetSettings.cpp  AssetSettings.hpp  AssetUTXOBalanceProvider.cpp  AssetUTXOBalanceProvider.hpp  AssetsBalance.cpp  AssetsBalance.hpp  CoinAsset.cpp  CoinAsset.hpp  ConnextPaymentsProxy.cpp  ConnextPaymentsProxy.hpp  LnPaymentsProxy.cpp  LnPaymentsProxy.hpp  LocalCurrency.cpp  LocalCurrency.hpp  NotificationData.cpp  NotificationData.hpp  OrderBookData.cpp  OrderBookData.hpp  OwnOrdersDataSource.cpp  OwnOrdersDataSource.hpp  SendTransactionParams.cpp  SendTransactionParams.hpp  SkinColors.cpp  SkinColors.hpp  TradingBotExchangeGateway.cpp  TradingBotExchangeGateway.hpp  TradingBotService.cpp  TradingBotService.hpp  TradingModelBatchedDataSource.cpp  TradingModelBatchedDataSource.hpp  TradingModelBatchedProxy.cpp  (+7 more)
src/core/Factories/: AbstractAssetBalanceProviderFactory.cpp  AbstractAssetBalanceProviderFactory.hpp  AbstractChainSyncManagerFactory.cpp  AbstractChainSyncManagerFactory.hpp  AbstractNetworkingFactory.cpp  AbstractNetworkingFactory.hpp  ApiClientNetworkingFactory.cpp  ApiClientNetworkingFactory.hpp  AssetBalanceProviderFactory.cpp  AssetBalanceProviderFactory.hpp  ChainSyncManagerFactory.cpp  ChainSyncManagerFactory.hpp  DexSwapClientFactory.cpp  DexSwapClientFactory.hpp  EmulatorChainSyncManagerFactory.cpp  EmulatorChainSyncManagerFactory.hpp  TradingBotExchangeGatewayFactory.cpp  TradingBotExchangeGatewayFactory.hpp
src/core/Models/: AbstractKeychain.cpp  AbstractKeychain.hpp  AllOnChainTxDataSource.cpp  AllOnChainTxDataSource.hpp  AskBidListModel.cpp  AskBidListModel.hpp  AssetTransactionsDataSource.cpp  AssetTransactionsDataSource.hpp  Context.cpp  (+89 more)
src/core_tests/: CMakeLists.txt  core_tests.pro  core_tests.qbs  main.cpp  tst_addressmanager.cpp  tst_chain.cpp  tst_coretests.cpp  tst_docker_api.cpp  tst_ethapi.cpp  tst_keystorage.cpp  tst_portalhttpclient.cpp  tst_qgrpcclient.cpp  tst_regtest.cpp  tst_swaps.cpp  tst_swaps.hpp  tst_tradingbot.cpp
src/crashreporting/: CMakeLists.txt
src/ethcore/: CMakeLists.txt
src/libupdater/: CMakeLists.txt  UpdateConfig.cpp  UpdateConfig.hpp  Updater.cpp  Updater.hpp  UpdaterUtils.cpp  UpdaterUtils.hpp  libupdater.pri  libupdater.pro
src/lightningswaps/: CMakeLists.txt  SwapService.cpp  SwapService.hpp  lightningswaps.pri  lightningswaps.pro
src/lightningswapsclient/: CMakeLists.txt  lightningswapsclient.pro  main.cpp
src/lightningswapsdaemon/: CMakeLists.txt  LssdConfig.cpp.in  LssdConfig.hpp  LssdSwapClientFactory.cpp  LssdSwapClientFactory.hpp  SwapGRPCServer.cpp  SwapGRPCServer.hpp  SwapsServiceNotifications.cpp  SwapsServiceNotifications.hpp  lightningswapsdaemon.pro  main.cpp
src/lightwalletserviceclient/: CMakeLists.txt  lightwalletserviceclient.pro  main.cpp
src/lndgrpcclient/: LndClient.cpp  LndClient.hpp  lndgrpcclient.pro  main.cpp  main.qml
src/lndtools/: CMakeLists.txt  lndtools.pri  lndtools.pro
src/networking/: CMakeLists.txt  libnetworking.pri  networking.pro  networking.qbs
src/qgrpc/: CMakeLists.txt  qgrpc.pri  qgrpc.pro
src/tor/: TorController.cpp  TorController.hpp  tor.pri  tor.pro
src/tradingbot/: CMakeLists.txt
src/walletcore/: CMakeLists.txt  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bech32.cpp  bip39.cpp  bip39.h  bip39_english.h  bitcoin.pro  chainparams.cpp  chainparams.hpp  coinselection.cpp  coinselection.h  compat.h  core_types.h  crypter.cpp  crypter.h  db.cpp  db.h  dbwrapper.cpp  dbwrapper.h  fees.cpp  fees.h  fs.cpp  fs.h  hash.cpp  hash.h  hdchain.cpp  hdchain.h  interfaces.cpp  interfaces.hpp  key.cpp  key.h  key_io.cpp  key_io.h  keystore.cpp  keystore.h  libbitcoin.pri  optional.h  (+27 more)
(+633 files in other folders)
